@@ -1,3 +1,8 @@
+2009-01-09  Alexandru Harsanyi  <haral@users.sourceforge.net>
+
+	* vc-clearcase.el (clearcase-finish-checkout): 410 Fix Bug
+	2493759: account for FILE being a fileset.
+
 2008-12-16  Alexandru Harsanyi  <haral@users.sourceforge.net>
 
 	* vc-clearcase.el (vc-clearcase-diff): don't strip the files from
